# jenkins_logs_parser

./: .gitignore  README.md  pyproject.toml  setup.py
JenkinsLogsParser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jenkins_logs_parser/: main.py
tests/: test_main.py
