[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JenkinsLogsParser"
version = "0.1.0"
description = "Jenkins Logs Parser Project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "platformdirs",
]

[project.scripts]
jlt = "jenkins_logs_parser.main:main"
